--- a/hover.css
+++ b/hover.css
@@ -1,3 +1,5 @@
+/* cardhovercss */
+
 .featureCardBox {
   position: relative;
 }
@@ -56,4 +58,21 @@
 
 .newFeatureCard {
   box-shadow: 2px 4px 9px 1px hsla(0, 0%, 0%, 0.05);
+}
+
+
+
+/* animationcss */
+
+.companiesList{
+  animation: 5s infinite linear moveCompany;
+}
+
+@keyframes moveCompany {
+    0%{
+      top: 0;
+    }
+    100%{
+      top:-50%;
+    }
 }
