--- a/hover.css
+++ b/hover.css
@@ -76,3 +76,16 @@
       top:-50%;
     }
 }
+
+
+/* slider */
+
+/* .slide-row{
+  display: flex;
+  width: 3200px;
+}
+.testimonial1{
+  width: 800px;
+  height: 400px;
+  position: relative;
+} */
