added last section

--- a/hover.css
+++ b/hover.css
@@ -78,14 +78,6 @@
 }
 
 
-/* slider */
-
-/* .slide-row{
-  display: flex;
-  width: 3200px;
+.ctaSection{
+    background-size: 100% 100%;
 }
-.testimonial1{
-  width: 800px;
-  height: 400px;
-  position: relative;
-} */
